syntax = "proto3";

option csharp_namespace = "GrpcServices";

package sample;

service Sample {
  // Unary
  rpc UnaryCall (SampleRequest) returns (SampleResponse);

  // Server streaming
  rpc StreamingFromServer (SampleRequest) returns (stream SampleResponse);

  // Client streaming
  rpc StreamingFromClient (stream SampleRequest) returns (SampleResponse);

  // Bi-directional streaming
  rpc StreamingBothWays (stream SampleRequest) returns (stream SampleResponse);
}

message SampleRequest {
    int32 pageIndex = 1;
    int32 pageSize = 2;
    bool isDescending = 3;
}

message SampleResponse {
    int32 index = 1;
}